At least in working condition.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body style="margin: 0; padding: 0; background-color: #fff;">
 
 <script type="text/javascript">
-    next2d.load("develop");
+    // next2d.load("develop");
+    const root = next2d.createRootMovieClip(240, 240, 60);
+    console.log(root, next2d)
+
 </script>
 </body>
 
