--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
     // next2d.load("develop");
     const root = next2d.createRootMovieClip(240, 240, 60);
-    console.log(root, next2d)
+    console.log(root, next2d);
 
 </script>
 </body>
