--- a/index.html
+++ b/index.html
@@ -12,22 +12,37 @@
 
     <script type="text/javascript">
 
-        const root = next2d.createRootMovieClip(240, 240, 60);
+        const root = next2d.createRootMovieClip(240, 240, 1);
 
         const {Shape} = next2d.display;
         const shape = root.addChild(new Shape());
 
         shape
             .graphics
-            .beginFill(0, 1)
+            .beginFill(0, 0.5)
             .moveTo(0, 0)
             .lineTo(0, 100)
             .lineTo(100, 100)
             .lineTo(100, 0)
             .lineTo(0, 0)
+            .moveTo(25, 25)
+            .lineTo(25, 75)
+            .lineTo(75, 75)
+            .lineTo(75, 25)
+            .lineTo(25, 25)
+            .endFill()
+            .beginFill("red", 0.5)
+            .moveTo(50, 50)
+            .lineTo(50, 150)
+            .lineTo(150, 150)
+            .lineTo(150, 50)
+            .lineTo(50, 50)
             .endFill();
 
         console.log(shape);
+
+        shape.x = 20;
+        shape.y = 20;
 
     </script>
 
