--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         shape
             .graphics
-            .beginFill(0, 0.5)
+            .beginFill("green", 0.5)
             .moveTo(0, 0)
             .lineTo(0, 100)
             .lineTo(100, 100)
@@ -38,8 +38,6 @@
             .lineTo(150, 50)
             .lineTo(50, 50)
             .endFill();
-
-        console.log(shape);
 
         shape.x = 20;
         shape.y = 20;
