--- a/index.html
+++ b/index.html
@@ -14,34 +14,31 @@
 
         const root = next2d.createRootMovieClip(240, 240, 1);
 
-        const {Shape} = next2d.display;
+        const {Shape,GradientType,SpreadMethod}  = next2d.display;
+        const {Matrix} = next2d.geom;
         const shape = root.addChild(new Shape());
+
+        const colors = ["red", "blue"];
+        const alphas = [1, 1];
+        const ratios = [0x00, 0xff];
+        const matrix = new Matrix();
+        matrix.createGradientBox(20, 20, 0, 0, 0);
 
         shape
             .graphics
-            .beginFill("green", 0.5)
-            .moveTo(0, 0)
-            .lineTo(0, 100)
-            .lineTo(100, 100)
-            .lineTo(100, 0)
-            .lineTo(0, 0)
-            .moveTo(25, 25)
-            .lineTo(25, 75)
-            .lineTo(75, 75)
-            .lineTo(75, 25)
-            .lineTo(25, 25)
-            .endFill()
-            .beginFill("red", 0.5)
-            .moveTo(50, 50)
-            .lineTo(50, 150)
-            .lineTo(150, 150)
-            .lineTo(150, 50)
-            .lineTo(50, 50)
-            .endFill();
+            .lineStyle(10)
+            .lineGradientStyle(
+                GradientType.LINEAR,
+                colors, alphas, ratios,
+                matrix, SpreadMethod.REPEAT
+            )
+            .drawRect(0, 0, 100, 100)
+            .endLine();
+
+        console.log(shape);
 
         shape.x = 20;
         shape.y = 20;
-
 
     </script>
 
