tool処理に対応

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         // next2d.load("develop");
 
+        const {next2d} = window;
+
         const root = next2d.createRootMovieClip(760, 600, 1);
 
         const {Shape,GradientType,SpreadMethod,InterpolationMethod}  = next2d.display;
