--- a/index.html
+++ b/index.html
@@ -11,26 +11,7 @@
 <body style="margin: 0; padding: 0; background-color: #fff;">
 
     <script type="text/javascript">
-
-        // next2d.load("develop");
-
-        const {next2d} = window;
-        const {TextField} = next2d.text;
-
-        const root = next2d.createRootMovieClip(200, 200, 1);
-
-        const textField = new TextField();
-        textField.border = true;
-
-        textField.defaultTextFormat.size = 40;
-        textField.defaultTextFormat.underline = true;
-
-        textField.text = "abc";
-        textField.x = 50;
-        textField.y = 50;
-        root.addChild(textField);
-
-
+        next2d.load("develop");
     </script>
 
 </body>
