--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja" prefix="og: http://ogp.me/ns#">
-
 <head>
     <meta charset="UTF-8"/>
     <title>Next2D Player</title>
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="next2d.js"></script>
 </head>
-
 <body style="margin: 0; padding: 0; background-color: #fff;">
-
     <script type="text/javascript">
         next2d.load("develop");
     </script>
-
 </body>
-
 </html>
