--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         const {TextField, TextFieldAutoSize, TextFieldType} = next2d.text;
 
         const textField = new TextField();
+        textField.defaultTextFormat.font = "Times";
         textField.autoSize = TextFieldAutoSize.LEFT;
         textField.x = 20;
         textField.y = 20;
@@ -21,9 +22,7 @@
         textField.background = true;
         textField.multiline  = true;
         textField.type = TextFieldType.DYNAMIC;
-        // textField.wordWrap   = true;
-
-        textField.text = "aaa\naaa\naaa\naaa";
+        textField.text = "aaa\njpi\naaa\nxyz";
 
         root.addChild(textField);
 
