--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 0; padding: 0; background-color: #fff;">
     <script type="text/javascript">
-        next2d.load("develop")
+        next2d.load("develop");
     </script>
 </body>
 </html>
