--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 </head>
 <body style="margin: 0; padding: 0; background-color: #fff;">
     <script type="text/javascript">
-        next2d.load("develop");
+        // next2d.load("develop");
+
+        const {Loader}     = next2d.display;
+        const {URLRequest} = next2d.net;
+        const {Event}      = next2d.events;
+
+        // create root MovieClip
+        const root = next2d.createRootMovieClip(1240, 1240, 12);
+
+        const request = new URLRequest("http://localhost:3000/json/sample/sample.png");
+        const loader  = new Loader(request);
+
+
+        loader
+            .contentLoaderInfo
+            .addEventListener(Event.COMPLETE, function (event)
+            {
+                const loaderInfo = event.currentTarget;
+
+                root.addChild(loaderInfo.content);
+            });
+
+        loader.loadImage(request);
     </script>
 </body>
 </html>
