#154 textパッケージをv2へ移行(WIP)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script>
     window.addEventListener("DOMContentLoaded", async () => 
     {
-        const root = await next2d.createRootMovieClip();
+        const root = await next2d.createRootMovieClip(720, 720);
         const TextField = next2d.text.TextField;
 
         const textField = new TextField();
