#154 update package.json

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         shape
             .graphics
             .beginFill("#ff0000")
-            .drawRect(0, 0, 100, 100);
+            .drawCircle(50, 50, 50);
 
         console.log(root);
     });
