#154 hit testを実装(WIP)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         const { TextField } = next2d.text;
 
         const sprite = root.addChild(new Sprite());
-        // sprite.buttonMode = true;
+        sprite.buttonMode = true;
         sprite.x = 50;
         sprite.y = 50;
 
