#154 TextFieldのinput機能を実装(WIP)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         textFiled.border = true;
         textFiled.type = "input";
         textFiled.multiline = true;
+        textFiled.wordWrap = true;
         textFiled.text = "Hello Next2D\nTest Mode On\n\nText Field";
 
         const shape = sprite.addChild(new Shape());
