#154 TextFieldのコピー＆ペーストを実装(WIP)

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         textFiled.border = true;
         textFiled.type = "input";
         textFiled.multiline = true;
-        textFiled.wordWrap = true;
-        textFiled.text = "Hello Next2D\nTest Mode On Test Mode On Test Mode On\n\n\n\n\n\n\n\n\n\nText Field";
+        // textFiled.wordWrap = true;
+        textFiled.text = "Hello Next2D\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On\nText Field\nText Field\n\n\n\n\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On";
 
         const shape = sprite.addChild(new Shape());
         shape
