--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         textFiled.type = "input";
         textFiled.multiline = true;
         // textFiled.wordWrap = true;
-        textFiled.text = "Hello Next2D\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On\nText Field\nText Field\n\n\n\n\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On";
+        textFiled.text = "Hello Next2D\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On\nText Field\nText Field\n\n\n\nText Field\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On";
 
         const shape = sprite.addChild(new Shape());
         shape
