--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
 
         const { Sprite, Shape } = next2d.display;
         const { TextField } = next2d.text;
+        const { PointerEvent } = next2d.events;
 
         const sprite = root.addChild(new Sprite());
         sprite.buttonMode = true;
         sprite.x = 50;
         sprite.y = 50;
+        sprite.addEventListener(PointerEvent.POINTER_DOWN, () =>
+        {
+            sprite.startDrag();
+        });
+        sprite.addEventListener(PointerEvent.POINTER_UP, () =>
+        {
+            sprite.stopDrag();
+        });
 
-        const textFiled = sprite.addChild(new TextField());
-        textFiled.x = 150;
+        const textFiled = root.addChild(new TextField());
+        textFiled.x = 250;
         textFiled.y = 100;
         textFiled.border = true;
         textFiled.type = "input";
@@ -33,10 +42,9 @@
         const shape = sprite.addChild(new Shape());
         shape
             .graphics
-            .beginFill("#ff0000")
+            .beginFill("#0eff0e")
             .drawCircle(50, 50, 50);
 
-        console.log(root);
     });
 </script>
 </body>
