#154 maskプロパティーを実装

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         // // textFiled.wordWrap = true;
         // textFiled.text = "Hello Next2D\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On Test Mode On\nText Field\nText Field\n\n\n\nText Field\nTest Mode On Test Mode On Test Mode On Test Mode On Test Mode On";
 
-        const maskShape = sprite.addChild(new Shape());
+        const maskShape = new Shape(); //sprite.addChild(new Shape());
         const viewShape = sprite.addChild(new Shape());
         viewShape.x = 100;
         viewShape.y = 100;
