--- a/index.html
+++ b/index.html
@@ -14,16 +14,49 @@
 
         const { Sprite, Shape } = next2d.display;
         const { TextField } = next2d.text;
-        const { Video } = next2d.media;
         const { PointerEvent } = next2d.events;
         const { Rectangle } = next2d.geom;
 
         const root = await next2d.createRootMovieClip(480, 480);
+        
+        const hitSprite = root.addChild(new Sprite());
+        const hitShape  = hitSprite.addChild(new Shape());
+        hitShape.x = 250;
+        hitShape.y = 250;
+        hitShape
+            .graphics
+            .beginFill("#ff00ee")
+            .drawRect(0, 0, 150, 150);
 
         const sprite = root.addChild(new Sprite());
-        sprite.addChild(new Shape());
-        sprite.addChild(new TextField());
-        sprite.addChild(new Video());
+        sprite.buttonMode = true;
+        sprite.addEventListener(PointerEvent.POINTER_DOWN, (event) => 
+        {
+            sprite.startDrag();
+        });
+        sprite.addEventListener(PointerEvent.POINTER_UP, (event) => 
+        {
+            sprite.stopDrag();
+        });
+
+        const maskShape = new Shape(); //sprite.addChild(new Shape());
+        const viewShape = sprite.addChild(new Shape());
+        viewShape.x = 100;
+        viewShape.y = 100;
+        viewShape
+            .graphics
+            .beginFill("#0eff0e")
+            .drawRect(0, 0, 100, 100);
+
+        maskShape.x = 100;
+        maskShape.y = 100;
+        maskShape
+            .graphics
+            .beginFill("#000")
+            .drawCircle(50, 50, 50);
+
+        // sprite.hitArea = hitSprite;
+        sprite.mask = maskShape;
     });
 </script>
 </body>
