--- a/index.html
+++ b/index.html
@@ -10,7 +10,39 @@
 <script>
     window.addEventListener("DOMContentLoaded", async () => 
     {
-        next2d.load("develop");
+        // next2d.load("develop");
+
+        const { Sprite, Shape } = next2d.display;
+        const { PointerEvent } = next2d.events;
+
+        const root = await next2d.createRootMovieClip(480, 480);
+        const sprite = root.addChild(new Sprite());
+        sprite.buttonMode = true;
+
+        const shape1 = sprite.addChild(new Shape());
+        shape1
+            .graphics
+            .beginFill("#ff0000")
+            .drawRect(0, 0, 100, 100);
+
+        const shape2 = sprite.addChild(new Shape());
+        shape2
+            .graphics
+            .beginFill("#00ff00")
+            .drawRect(30, 30, 100, 100);
+
+        const shape3 = sprite.addChild(new Shape());
+        shape3
+            .graphics
+            .beginFill("#0000ff")
+            .drawRect(60, 60, 100, 100);
+
+        sprite.x = 100;
+        sprite.y = 100;
+        sprite.addEventListener(PointerEvent.POINTER_DOWN, () =>
+        {
+            console.log(sprite.getBounds(root));
+        });
     });
 </script>
 </body>
