#154 フレームの定期処理を実装

--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 <script>
     window.addEventListener("DOMContentLoaded", async () => 
     {
-        next2d.load("develop");
+        // next2d.load("develop");
+
+        const { Sprite, Shape } = next2d.display;
+        const { PointerEvent, Event } = next2d.events;
+
+        const root = await next2d.createRootMovieClip(480, 480);
+
+        const sprite = root.addChild(new Sprite());
+        sprite.buttonMode = true;
+
+        const shape = sprite.addChild(new Shape());
+        shape
+            .graphics
+            .beginFill(0x0000ff)
+            .drawCircle(0, 50, 50);
+
+        sprite.addEventListener(PointerEvent.POINTER_DOWN, () => 
+        {
+            sprite.startDrag();
+        });
+        sprite.addEventListener(PointerEvent.POINTER_UP, () => 
+        {
+            sprite.stopDrag();
+        });
+        sprite.addEventListener(Event.ENTER_FRAME, () => 
+        {
+            sprite.x++;
+            sprite.y++;
+        });
     });
 </script>
 </body>
