--- a/index.html
+++ b/index.html
@@ -12,33 +12,23 @@
     {
         // next2d.load("develop");
 
-        // const { Sprite, Shape } = next2d.display;
-        // const { PointerEvent, Event } = next2d.events;
-
-        // const root = await next2d.createRootMovieClip(480, 480);
-
-        // const sprite = root.addChild(new Sprite());
-        // sprite.buttonMode = true;
-
-        // const shape = sprite.addChild(new Shape());
-        // shape
-        //     .graphics
-        //     .beginFill(0x0000ff)
-        //     .drawCircle(0, 50, 50);
-
-        // sprite.addEventListener(PointerEvent.POINTER_DOWN, () => 
-        // {
-        //     sprite.startDrag();
-        // });
-        // sprite.addEventListener(PointerEvent.POINTER_UP, () => 
-        // {
-        //     sprite.stopDrag();
-        // });
-        // sprite.addEventListener(Event.ENTER_FRAME, () => 
-        // {
-        //     sprite.x++;
-        //     sprite.y++;
-        // });
+        const { Sprite, Shape } = next2d.display;
+        const root = await next2d.createRootMovieClip(480, 480);
+        const shape = root.addChild(new Shape());
+        shape
+            .graphics
+            .beginFill(0x0000ff)
+            .moveTo(0, 0)
+            .lineTo(100, 0)
+            .lineTo(100, 100)
+            .lineTo(0, 100)
+            .lineTo(0, 0)
+            .moveTo(50, 50)
+            .lineTo(75, 50)
+            .lineTo(75, 75)
+            .lineTo(50, 75)
+            .lineTo(50, 50)
+            .endFill();
     });
 </script>
 </body>
