--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             .lineTo(100, 100)
             .lineTo(0, 100)
             .lineTo(0, 0)
+            // non-zero
+            // .moveTo(75, 75)
+            // .lineTo(50, 75)
+            // .lineTo(50, 50)
+            // .lineTo(75, 50)
+            // .lineTo(75, 75)
+            // even-odd
             .moveTo(50, 50)
             .lineTo(75, 50)
             .lineTo(75, 75)
